--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,23 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Gradle performance
+org.gradle.jvmargs=-Xmx8G
 org.gradle.parallel=true
+org.gradle.java.home=/usr/lib/jvm/java-21-openjdk-amd64
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.7
 
-# Mod Properties
+# Minecraft and ModLoader versions
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
+loader_version=0.16.9
+fabric_api_version=0.119.2+1.21.4
+
+
+# Mod information
 mod_version=1.0.0
 maven_group=com.aurora
 archives_base_name=aurora
 
-# Dependencies
-fabric_version=0.96.11+1.20.4
+
+# Optional Dependencies
+modmenu_version=13.0.3
+cloth_config_version=11.1.118
+lombok_version=1.18.32
