--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-node_modules
+# next.js
+.next/
+out/
+build/
+
+# node_modules
+node_modules/
+
+# Packages results
+*.tgz
+*.zip
+*.rar
+
+# Logs
+*.log
+*.DS_Store
+**/tmp
+.env
+.env.*
+!.env.example
+
+# Editor & IDE
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
